fixes bug 292659 "No scrollbars, non-functional submit in libXUL/XULRunner app" r=bsmedberg a=asa